SchoolMicroservice/openshift/assets/mongo_service.yml
kind: Service
apiVersion: v1
metadata:
  name: school-mongodb-service
  namespace: bramterlouw-dev
  annotations:
    description: Exposes and load balances the application pods
  labels:
    name: school-mongodb-service
    app: school-microservice-app
    project: language-fitness
spec:
  ports:
    - name: tcp
      port: 27017
      targetPort: 27017
  selector:
    name: school-mongodb
