SchoolMicroservice/openshift/assets/microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-microservice-deployment
  namespace: bramterlouw-dev
  labels:
    app.kubernetes.io/part-of: school-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: school-microservice-deployment
      app: school-microservice-app
      project: language-fitness
  template:
    metadata:
      labels:
        name: school-microservice-deployment
        app: school-microservice-app
        project: language-fitness
    spec:
      containers:
        - name: school-microservice
          image: microservice_image
          ports:
            - containerPort: 8083
            - containerPort: 9050
            - containerPort: 9092
          readinessProbe:
            timeoutSeconds: 5
            initialDelaySeconds: 20
            httpGet:
              path: "/health/ready"
              port: 8083
          livenessProbe:
            timeoutSeconds: 10
            initialDelaySeconds: 30
            httpGet:
              path: "/health/live"
              port: 8083
---
kind: Service
apiVersion: v1
metadata:
  name: school-microservice-service
  namespace: bramterlouw-dev
  annotations:
    description: Exposes and load balances the application pods
  labels:
    name: school-microservice-service
    app: school-microservice-app
    project: language-fitness
spec:
  ports:
    - name: http
      port: 8083
      targetPort: 8083
    - name: tcp
      port: 9050
      targetPort: 9050
      protocol: TCP
    - name: tcp-saga
      port: 9092
      targetPort: 9092
      protocol: TCP
  selector:
    name: school-microservice-deployment
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: school-microservice-route
  namespace: bramterlouw-dev
  labels:
    name: school-microservice-route
    app: school-microservice-app
    project: language-fitness
spec:
  port:
    targetPort: 8083
  to:
    kind: Service
    name: school-microservice-service
